# gitu

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json
src/: git.rs  input.rs  main.rs  syntax.rs  ui.rs
src/ui/: app.rs  mod.rs  render.rs
